--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Secret value is 7365298
-</body>
+<html>
+    <head>
+        <title>Basics of HTML demo</title>
+    </head>
+    <body>
+        <p>Secret value is <b>6047366</b>.</p>
+        <p>Read more at
+            <a href="http://www.codeabbey.com/index/task_view/basics-of-html">this task</a>.
+        </p>
+    </body>
 </html>
